<resources>
    <string name="activity_title_contact_details">Contact details</string>
    <string name="label_selection_code">Code</string>
    <string name="label_selection_list">List</string>
    <string name="label_selection_list_bullet">Bullet</string>
    <string name="label_selection_list_ordered">Numbered</string>
    <string name="label_selection_quote">Quote</string>
    <string name="label_selection_heading">Heading</string>
    <string name="label_selection_heading_1">Heading1</string>
    <string name="label_selection_heading_2">Heading2</string>
    <string name="label_selection_heading_3">Heading3</string>
    <string name="label_selection_heading_4">Heading4</string>
    <string name="label_selection_heading_5">Heading5</string>
    <string name="label_selection_bold">Bold</string>
    <string name="label_selection_italic">Italic</string>
    <string name="label_selection_strikethrough">Strikethrough</string>
    <string name="pref_autodownload_size_title">Automatically download attachments…</string>
    <string name="pref_qr_correction_level_title">QR-code error correction level</string>
    <string name="pref_reset_dialogs_title">Reset all dialog warnings</string>
    <string name="pref_reset_dialogs_summary">Restore dialogs hidden by \"do not show this message again\"</string>
    <string name="pref_read_receipt_title">Send read receipts</string>
    <string name="pref_read_receipt_summary">When this is on, people are notified when you have read their messages. This can be overridden in each discussion.</string>
    <string name="pref_link_preview_outbound_title">Attach a preview of links you send</string>
    <string name="pref_link_preview_summary_outbound">Once activated, Olvid will fetch a preview of links you send and attach it to the message.</string>
    <string name="pref_link_preview_inbound_title">Fetch previews of received links</string>
    <string name="pref_link_preview_summary_inbound">Once activated, Olvid will automatically fetch previews of links you receive (if a preview is not attached to the message).</string>
    <string name="pref_use_lock_screen_title">Use application lock screen</string>
    <string name="pref_use_lock_screen_summary">Turn this on to protect Olvid with a lock screen at startup.</string>
    <string name="pref_unlock_biometry_title">Unlock with biometry</string>
    <string name="pref_unlock_biometry_summary">When this is on, Olvid can be unlocked using the default biometric authentication method of your device.</string>
    <string name="pref_reset_pin_title">Reset unlock PIN</string>
    <string name="pref_reset_pin_summary">Modify the PIN code used to unlock Olvid.</string>
    <string name="pref_hide_notification_contents_title">Hide notification contents</string>
    <string name="pref_hide_notification_contents_summary">When this is on, all notifications are replaced by \"Olvid requires your attention\".</string>
    <string name="pref_lock_grace_time_title">Lock screen delay</string>
    <string name="pref_lock_grace_time_dialog_message">Delay before locking Olvid when it goes in the background</string>
    <string name="pref_keep_lock_service_open_title">Lock screen notification</string>
    <string name="pref_keep_lock_service_open_summary_off">Only show a notification when Olvid is unlocked.</string>
    <string name="pref_keep_lock_service_open_summary_on">Always show Olvid\'s lock status in a notification.</string>
    <string name="pref_keyboard_incognito_mode_summary">When this is on, Olvid will instruct compatible keyboards to use \"incognito mode\"</string>
    <string name="pref_keyboard_incognito_mode_title">Use keyboard incognito mode</string>
    <string name="pref_prevent_screen_capture_title">Prevent screenshots</string>
    <string name="pref_prevent_screen_capture_summary">When this is on, screenshots are disabled in Olvid and in the recent apps list.</string>
    <string name="pref_debug_log_level_title">Output debug logs</string>
    <string name="pref_debug_log_level_summary">When enabled, logcat will include debug level logs for Olvid.</string>
    <string name="pref_webclient_language">Language</string>
    <string name="pref_webclient_theme">Theme</string>
    <string name="pref_webclient_send_on_enter">Send on Enter</string>
    <string name="pref_webclient_send_on_enter_summary">Automatically send message when hitting Enter key.</string>
    <string name="pref_webclient_notification_show_on_browser">Pop-up notifications</string>
    <string name="pref_webclient_notification_show_on_browser_summary">Show a pop-up notification on browser when receiving a new message.</string>
    <string name="pref_webclient_notification_sound">Notifications sound</string>
    <string name="pref_webclient_notification_sound_summary">Enable notification sound in WebClient to be alerted of incoming messages.</string>
    <string name="pref_webclient_keep_alive_on_close">Keep WebClient running as background task</string>
    <string name="pref_webclient_keep_alive_on_close_summary">Keep WebClient connection alive even if App is killed.</string>
    <string name="pref_webclient_show_error_notifications">Show error notifications</string>
    <string name="pref_webclient_show_error_notifications_summary">Show a notification on App when there is an error.</string>
    <string name="pref_webclient_notification_for_messages_after_inactivity_title">Notify after inactivity</string>
    <string name="pref_webclient_notification_for_messages_after_inactivity_summary">Receive a notification in case of activity after 10 minutes of inactivity.</string>
    <string name="pref_expose_recent_discussions_title">Maintain a list of recent discussions</string>
    <string name="pref_expose_recent_discussions_summary">When this is on, Olvid will maintain a list of recent discussions and expose it to your Android system. This can make direct sharing with Olvid faster, but may expose the name of your contacts.</string>
    <string name="pref_auto_open_limited_visibility_inbound_title">Automatically open ephemeral messages</string>
    <string name="pref_retain_wiped_outbound_messages_title">Retain wiped outbound messages</string>
    <string name="pref_auto_open_limited_visibility_inbound_summary">When activated, read once messages and messages with the default limited visibility duration are opened as soon as you enter the discussion. Otherwise, a click is required.</string>
    <string name="pref_retain_wiped_outbound_messages_summary">When activated, wiped outbound messages are retained so you can see when they are delivered or read. Otherwise, they are deleted.</string>
    <string name="pref_discussion_read_once_title">Read once messages</string>
    <string name="pref_discussion_read_once_summary">When activated, messages and attachments are displayed once, and are deleted when exiting the discussion.</string>
    <string name="pref_discussion_visibility_duration_title">Message visibility duration</string>
    <string name="pref_discussion_existence_duration_title">Message existence duration</string>
    <string name="pref_discussion_visibility_duration_summary_null">No visibility limit</string>
    <string name="pref_discussion_existence_duration_summary_null">No existence limit</string>
    <string name="pref_category_default_retention_policy_title">Message retention policy</string>
    <string name="pref_category_default_retention_policy_summary">The settings below allow you to automatically delete old messages in your discussions. They can be overridden in each discussion.</string>
    <string name="pref_category_default_ephemeral_settings_title">Default ephemeral message settings</string>
    <string name="pref_category_default_ephemeral_settings_summary">The settings below are applied by default to any new discussion you create. They will be shared with other participants in this discussion.</string>
    <string name="pref_discussion_retention_count_title">Count-based retention policy</string>
    <string name="pref_discussion_retention_duration_title">Time-based retention policy</string>
    <string name="pref_discussion_retention_duration_summary">Delete messages older than: %1$s</string>
    <string name="pref_discussion_retention_count_summary_null">Keep all messages</string>
    <string name="pref_discussion_default_retention_count_dialog_message">Enter the number of messages to keep in each discussion. Leave blank to keep all messages.\n\nUnread messages are never deleted.</string>
    <string name="pref_export_app_databases_title">Export app databases</string>
    <string name="pref_export_app_databases_summary">Exporting app databases allows you to inspect exactly what Olvid stores internally.\nWarning: these databases contain all your sensitive information and should be kept in a safe place!</string>
    <string name="pref_storage_explorer_title">Internal storage explorer</string>
    <string name="pref_storage_explorer_summary">Explore the internal storage of your Olvid application!</string>
    <string name="pref_require_unlock_before_connecting_to_webclient_title">Require unlock before each connection</string>
    <string name="pref_require_unlock_before_connecting_to_webclient_summary">When this security feature is active, connecting to the webclient will require to unlock Olvid.</string>
    <string name="pref_disable_push_notifications_title">Disable Google push notifications</string>
    <string name="pref_disable_push_notifications_summary">If you disable push notifications you will not be notified of new messages when Olvid is in the background. Keep in mind that Olvid never sends any data in these push notifications: the only information Google gets from them is that you received a message in Olvid.</string>
    <string name="pref_permanent_websocket_title">Maintain a permanent WebSocket connection</string>
    <string name="pref_permanent_websocket_summary">When activated, Olvid will maintain a permanent connection to its server. This can improve message reception speed and reliability, but it may drain your battery.</string>
    <string name="pref_permanent_foreground_service_title">Use a foreground service</string>
    <string name="pref_permanent_foreground_service_summary">Having a foreground service prevents Olvid from being stopped by the system. A small icon is displayed in your notifications area and can be hidden in the system preferences.</string>
    <string name="pref_share_app_version_title">Share app and OS version with Olvid</string>
    <string name="pref_share_app_version_summary">When activated, your app will share its version and the version of your OS (and nothing more) with the Olvid servers. This data is extremely valuable when rolling-out new features.</string>
    <string name="pref_use_internal_image_viewer_title">Use internal image viewer</string>
    <string name="pref_use_internal_image_viewer_summary">When activated, clicking an image attachment will open it in the internal viewer. Otherwise, your device\'s default image app will be used.</string>
    <string name="pref_hidden_profile_close_policy_title">Hidden profile closing policy</string>
    <string name="pref_hidden_profile_close_policy_summary_not_set">No policy set (hidden profile remains open)</string>
    <string name="pref_sending_foreground_service">Enable the \"message being sent\" notification</string>
    <string name="pref_sending_foreground_service_summary">Activating this setting will enable a foreground service to run when a message is being sent. This may prevent the system from killing Olvid while an attachment is being uploaded.</string>
    <string name="pref_use_legacy_zxing_scanner_title">Use legacy ZXing library for QR code scanning</string>
    <string name="pref_use_legacy_zxing_scanner_summary">By default, ML Kit is used for QR code scanning. Enable this option if you have issues scanning QR codes from within Olvid.</string>
</resources>