<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_key_send_read_receipt"
            android:summary="@string/pref_read_receipt_summary"
            android:title="@string/pref_read_receipt_title"
            android:icon="@drawable/ic_pref_read_receipt"
            android:order="10"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_key_hide_notification_contents"
            android:summary="@string/pref_hide_notification_contents_summary"
            android:title="@string/pref_hide_notification_contents_title"
            android:icon="@drawable/ic_pref_hide_notification_contents"
            android:order="20"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_key_expose_recent_discussions"
            android:summary="@string/pref_expose_recent_discussions_summary"
            android:title="@string/pref_expose_recent_discussions_title"
            android:icon="@drawable/ic_pref_expose_recent_discussions"
            android:order="25"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_key_keyboard_incognito_mode"
            android:summary="@string/pref_keyboard_incognito_mode_summary"
            android:title="@string/pref_keyboard_incognito_mode_title"
            android:icon="@drawable/ic_pref_keyboard_incognito_mode"
            android:order="30"
            />
        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_pref_prevent_screen_capture"
            android:key="pref_key_prevent_screen_capture"
            android:summary="@string/pref_prevent_screen_capture_summary"
            android:title="@string/pref_prevent_screen_capture_title"
            android:order="40"
            />
        <Preference
            android:icon="@drawable/ic_pref_incognito"
            android:key="pref_key_hidden_profile_close_policy"
            android:title="@string/pref_hidden_profile_close_policy_title"
            tools:summary="@string/pref_hidden_profile_close_policy_summary_not_set"
            android:order="45"
            />
        <io.olvid.messenger.customClasses.NoClickSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_pref_disable_push_notifications"
            android:key="pref_key_disable_push_notifications"
            android:summary="@string/pref_disable_push_notifications_summary"
            android:title="@string/pref_disable_push_notifications_title"
            android:order="50"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_key_permanent_websocket"
            android:summary="@string/pref_permanent_websocket_summary"
            android:title="@string/pref_permanent_websocket_title"
            android:icon="@drawable/ic_pref_websocket"
            android:order="51" />
</PreferenceScreen>