<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        android:defaultValue="AppDefault"
        android:entries="@array/language_picker_webclient"
        android:entryValues="@array/language_picker_webclient_values"
        android:key="pref_key_language_webclient"
        android:title="@string/pref_webclient_language"
        app:useSimpleSummaryProvider="true"
        android:icon="@drawable/ic_pref_language"
        android:order="10" />
    <ListPreference
        android:defaultValue="BrowserDefault"
        android:entries="@array/theme_webclient"
        android:entryValues="@array/theme_webclient_values"
        android:key="pref_key_theme_webclient"
        android:title="@string/pref_webclient_theme"
        app:useSimpleSummaryProvider="true"
        android:icon="@drawable/ic_pref_dark_mode"
        android:order="20" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_key_send_on_enter_webclient"
        android:title="@string/pref_webclient_send_on_enter"
        android:summary="@string/pref_webclient_send_on_enter_summary"
        android:icon="@drawable/ic_pref_send"
        android:order="30"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_key_notification_show_on_browser"
        android:title="@string/pref_webclient_notification_show_on_browser"
        android:summary="@string/pref_webclient_notification_show_on_browser_summary"
        android:icon="@drawable/ic_pref_visibility"
        android:order="40"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_key_notification_sound_webclient"
        android:title="@string/pref_webclient_notification_sound"
        android:summary="@string/pref_webclient_notification_sound_summary"
        android:icon="@drawable/ic_pref_ringtone"
        android:order="50"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_key_keep_webclient_alive_after_close"
        android:title="@string/pref_webclient_keep_alive_on_close"
        android:summary="@string/pref_webclient_keep_alive_on_close_summary"
        android:icon="@drawable/ic_webclient_disconnected"
        android:order="60"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_key_show_error_notifications"
        android:title="@string/pref_webclient_show_error_notifications"
        android:summary="@string/pref_webclient_show_error_notifications_summary"
        android:icon="@drawable/ic_pref_hide_notification_contents"
        android:order="70"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_key_notifications_for_messages_after_inactivity"
        android:title="@string/pref_webclient_notification_for_messages_after_inactivity_title"
        android:summary="@string/pref_webclient_notification_for_messages_after_inactivity_summary"
        android:icon="@drawable/ic_pref_lock_grace_time"
        android:order="80"/>
    <io.olvid.messenger.customClasses.NoClickSwitchPreference
        android:defaultValue="true"
        android:key="pref_key_require_unlock_before_connecting_to_webclient"
        android:title="@string/pref_require_unlock_before_connecting_to_webclient_title"
        android:summary="@string/pref_require_unlock_before_connecting_to_webclient_summary"
        android:icon="@drawable/ic_pref_use_lock_screen"
        android:order="90"/>
</PreferenceScreen>