<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <io.olvid.messenger.customClasses.NoClickSwitchPreference
            android:defaultValue="false"
            android:key="pref_key_use_lock_screen"
            android:summary="@string/pref_use_lock_screen_summary"
            android:title="@string/pref_use_lock_screen_title"
            android:icon="@drawable/ic_pref_use_lock_screen"
            android:order="10"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_key_unlock_biometry"
            android:summary="@string/pref_unlock_biometry_summary"
            android:title="@string/pref_unlock_biometry_title"
            android:icon="@drawable/ic_pref_unlock_biometry"
            android:dependency="pref_key_use_lock_screen"
            android:order="20"/>
        <DropDownPreference
            android:defaultValue="30"
            android:entries="@array/lock_grace_times"
            android:entryValues="@array/lock_grace_times_values"
            android:key="pref_key_lock_grace_time"
            android:title="@string/pref_lock_grace_time_title"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_pref_lock_grace_time"
            android:dependency="pref_key_use_lock_screen"
            android:dialogTitle="@string/pref_lock_grace_time_dialog_message"
            android:order="30"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_key_keep_lock_service_open"
            android:summaryOn="@string/pref_keep_lock_service_open_summary_on"
            android:summaryOff="@string/pref_keep_lock_service_open_summary_off"
            android:title="@string/pref_keep_lock_service_open_title"
            android:icon="@drawable/ic_pref_keep_service"
            android:dependency="pref_key_use_lock_screen"
            android:order="40"/>
        <Preference
            android:key="pref_key_reset_pin"
            android:summary="@string/pref_reset_pin_summary"
            android:title="@string/pref_reset_pin_title"
            android:icon="@drawable/ic_pref_reset_pin"
            android:dependency="pref_key_use_lock_screen"
            android:order="100"/>
</PreferenceScreen>